--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -31,7 +31,7 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon="res://roberto.ico"
+application/icon="res://Francisco.ico"
 application/file_version="0.9"
 application/product_version="0.0.9"
 application/company_name="AuranticSky"
