--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,13 +1,13 @@
 [preset.0]
 
-name="InfinityVoid"
+name="OblivionTale"
 platform="Windows Desktop"
 runnable=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Área de Trabalho/InfintyVoid.exe"
+export_path="../../../Área de Trabalho/OblivionTale.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -36,7 +36,7 @@ application/icon="res://Francisco.ico"
 application/file_version=""
 application/product_version=""
 application/company_name="AuranticSky"
-application/product_name="InfinityVoid"
+application/product_name="OblivionTale"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
