--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -35,7 +35,7 @@ application/modify_resources=true
 application/icon="res://Francisco.ico"
 application/file_version=""
 application/product_version=""
-application/company_name="AuranticSky"
+application/company_name="Jonapii"
 application/product_name="OblivionTale"
 application/file_description=""
 application/copyright=""
